--- a/server/common/package.json
+++ b/server/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aashas/common",
-  "version": "1.2.32",
+  "version": "1.2.33",
   "description": "Shared library between microservices for code reuse",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -10,8 +10,8 @@
   "scripts": {
     "clean": "del-cli --force ./build",
     "build": "npm run clean && tsc",
-    "pub": "git add . && git commit -m \" minor fixes  \" && npm version patch && npm run build && npm publish",
-    "pub-main": "git add . && git commit -m \" added User deleted event   \" && npm version patch && npm run build && npm publish"
+    "pub": " npm version patch && git add . && git commit -m \" minor fixes  \"  && npm run build && npm publish",
+    "pub-main": "npm version patch &&  git add . && git commit -m \" added User deleted event   \"  && npm run build && npm publish"
   },
   "author": "",
   "license": "ISC",
