--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Aasha’s is a vibrant Couture and ready-to-wear fashion clothing house specializing in women and children’s wear. Designed in Hyderabad.",
   "main": "index.js",
   "scripts": {
-    "update": "npm run update --prefix server/auth"
+    "update": "npm run update --prefix server/auth",
+    "pub": "npm run pub --prefix server/common",
+    "main": "npm run pub-main --prefix server/common"
   },
   "jest": {
     "projects": [
