--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Aasha’s is a vibrant Couture and ready-to-wear fashion clothing house specializing in women and children’s wear. Designed in Hyderabad.",
   "main": "index.js",
   "scripts": {
-    "update": "npm run update --prefix server/auth",
+    "update": "npm i @aashas/common@latest && npm run update --prefix server/auth ",
     "pub": "npm run pub --prefix server/common",
-    "main": "npm run pub-main --prefix server/common"
+    "pub-main": "npm run pub-main --prefix server/common"
   },
   "jest": {
     "projects": [
@@ -16,7 +16,7 @@
   "author": "tsriramaraju",
   "license": "ISC",
   "dependencies": {
-    "@aashas/common": "^1.2.29",
+    "@aashas/common": "^1.2.36",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
@@ -36,6 +36,9 @@
     "hpp": "^0.2.3",
     "mongoose": "^5.10.12",
     "morgan": "^1.10.0",
+    "node-nats-streaming": "^0.3.2",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "typescript": "^4.0.5",
     "uuid": "^8.3.0",
     "xss-clean": "^0.1.1"
@@ -44,6 +47,8 @@
     "@types/express-mongo-sanitize": "^1.3.2",
     "@types/hpp": "^0.2.1",
     "@types/jest": "^26.0.15",
+    "@types/passport": "^1.0.4",
+    "@types/passport-google-oauth20": "^2.0.4",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.2",
