--- a/server/auth/package.json
+++ b/server/auth/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aashas/common": "^1.2.35",
+    "@aashas/common": "^1.2.36",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
@@ -32,6 +32,8 @@
     "mongoose": "^5.10.12",
     "morgan": "^1.10.0",
     "node-nats-streaming": "^0.3.2",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "typescript": "^4.0.5",
     "uuid": "^8.3.0",
     "xss-clean": "^0.1.1"
@@ -40,6 +42,8 @@
     "@types/express-mongo-sanitize": "^1.3.2",
     "@types/hpp": "^0.2.1",
     "@types/jest": "^26.0.15",
+    "@types/passport": "^1.0.4",
+    "@types/passport-google-oauth20": "^2.0.4",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.2",
