--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/mongoose": "^5.7.37",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
+    "@types/passport-facebook": "^2.1.10",
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
@@ -38,6 +39,7 @@
     "morgan": "^1.10.0",
     "node-nats-streaming": "^0.3.2",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "typescript": "^4.0.5",
     "uuid": "^8.3.0",
