--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "passport-google-oauth20": "^2.0.0",
     "typescript": "^4.0.5",
     "uuid": "^8.3.0",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "ts-node-dev": "^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
@@ -55,7 +56,6 @@
     "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.2",
     "supertest": "^6.0.1",
-    "ts-jest": "^26.4.4",
-    "ts-node-dev": "^1.0.0"
+    "ts-jest": "^26.4.4"
   }
 }
