--- a/server/auth/package.json
+++ b/server/auth/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node-dev src/index.ts",
     "test": "jest --watchAll --no-cache --detectOpenHandles ",
-    "test:ci": "jest",
+    "test:ci": "jest --detectOpenHandles",
     "update": "npm i @aashas/common@latest"
   },
   "author": "",
