--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test
+name: Auth service actions
 
 on:
   pull_request:
@@ -7,7 +7,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 15.x]
+
     steps:
       - uses: actions/checkout@v2
-      - run: cd server/auth && npm i && npm run test:ci
-# test script
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: cd server/auth
+      - run: npm i
+      - run: npm run test:ci
