--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,4 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cd server/auth
-      - run: npm i
-      - run: npm run test:ci
-#
+      - run: cd server/auth && npm i && npm run test:ci
