--- a/server/auth/tsconfig.json
+++ b/server/auth/tsconfig.json
@@ -73,7 +73,8 @@
     "./src/**/*",
     "./@types",
     "../common/src/loaders/loggers.ts",
-    "src/config"
+    "src/config",
+    "../users/src/index.ts"
   ],
   "exclude": ["node_modules", "tests"]
 }
