--- a/server/k8s/ingress-srv.yaml
+++ b/server/k8s/ingress-srv.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
     - host: aashas.com
@@ -14,3 +14,7 @@ spec:
             backend:
               serviceName: auth-srv
               servicePort: 3001
+          - path: /api/v1/users/?(.*)
+            backend:
+              serviceName: users-srv
+              servicePort: 3002
