--- a/server/skaffold.yaml
+++ b/server/skaffold.yaml
@@ -6,9 +6,12 @@ build:
   artifacts:
     - image: tsriramaraju/auth
       context: auth
+    - image: tsriramaraju/users
+      context: users
 deploy:
   kubectl:
     manifests:
       - k8s/auth-depl.yaml
+      - k8s/users-depl.yaml
       - k8s/ingress-srv.yaml
       - k8s/nats-depl.yaml
