--- a/server/users/package.json
+++ b/server/users/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "users",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "@aashas/common": "^1.2.41",
-    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/express-mongo-sanitize": "^1.3.2",
@@ -21,11 +20,6 @@
     "@types/mongoose": "^5.7.37",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
-    "@types/passport": "^1.0.4",
-    "@types/passport-facebook": "^2.1.10",
-    "@types/passport-google-oauth20": "^2.0.4",
-    "@types/uuid": "^8.3.0",
-    "bcrypt": "^5.0.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -37,12 +31,8 @@
     "mongoose": "^5.10.12",
     "morgan": "^1.10.0",
     "node-nats-streaming": "^0.3.2",
-    "passport": "^0.4.1",
-    "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5",
-    "uuid": "^8.3.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
