--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "tsriramaraju",
   "license": "ISC",
   "dependencies": {
-    "@aashas/common": "^1.2.41",
+    "@aashas/common": "^1.2.42",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
@@ -41,10 +41,10 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5",
     "uuid": "^8.3.0",
-    "xss-clean": "^0.1.1",
-    "ts-node-dev": "^1.0.0"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
