--- a/server/users/package.json
+++ b/server/users/package.json
@@ -20,6 +20,7 @@
     "@types/mongoose": "^5.7.37",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
+    "@types/uuid": "^8.3.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
