--- a/.github/workflows/AuthService.yml
+++ b/.github/workflows/AuthService.yml
@@ -16,4 +16,5 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cd server/auth && npm i && npm run test:ci
+      - run: cd server/auth && npm i
+      - run: cd server/auth && npm run test:ci
