--- a/.github/workflows/UsersService.yml
+++ b/.github/workflows/UsersService.yml
@@ -16,4 +16,5 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cd server/users && npm i && npm run test:ci
+      - run: cd server/users && npm i
+      - run: cd server/users && npm run test:ci
