--- a/server/users/package.json
+++ b/server/users/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aashas/common": "^1.2.52",
+    "@aashas/common": "^1.2.54",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/express-mongo-sanitize": "^1.3.2",
@@ -30,6 +30,7 @@
     "helmet": "^4.2.0",
     "hpp": "^0.2.3",
     "mongoose": "^5.10.12",
+    "mongoose-update-if-current": "^1.4.0",
     "morgan": "^1.10.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^1.0.0",
