--- a/server/skaffold.yaml
+++ b/server/skaffold.yaml
@@ -8,10 +8,13 @@ build:
       context: auth
     - image: tsriramaraju/users
       context: users
+    - image: tsriramaraju/products
+      context: products
 deploy:
   kubectl:
     manifests:
       - k8s/auth-depl.yaml
       - k8s/users-depl.yaml
+      - k8s/products-depl.yaml
       - k8s/ingress-srv.yaml
       - k8s/nats-depl.yaml
