--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aasha’s is a vibrant Couture and ready-to-wear fashion clothing house specializing in women and children’s wear. Designed in Hyderabad.",
   "main": "index.js",
   "scripts": {
-    "update": "npm i @aashas/common@latest && npm run update --prefix server/auth && npm run update --prefix server/users && npm run update --prefix products/users",
+    "update": "npm i @aashas/common@latest && npm run update --prefix server/auth && npm run update --prefix server/users && npm run update --prefix server/products",
     "pub": "npm run pub --prefix server/common",
     "pub-main": "npm run pub-main --prefix server/common",
     "test": "jest --detectOpenHandles"
@@ -12,7 +12,7 @@
   "author": "tsriramaraju",
   "license": "ISC",
   "dependencies": {
-    "@aashas/common": "^1.2.54",
+    "@aashas/common": "^1.2.58",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
