--- a/server/orders/package.json
+++ b/server/orders/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "aashas",
-  "version": "2.0.0",
-  "description": "Aasha’s is a vibrant Couture and ready-to-wear fashion clothing house specializing in women and children’s wear. Designed in Hyderabad.",
+  "name": "orders",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "update": "npm i @aashas/common@latest && npm run update --prefix server/auth && npm run update --prefix server/users && npm run update --prefix server/products && npm run update --prefix server/orders",
-    "pub": "npm run pub --prefix server/common",
-    "pub-main": "npm run pub-main --prefix server/common",
-    "test": "jest --detectOpenHandles"
+    "start": "ts-node-dev src/index.ts",
+    "test": "jest --watchAll --no-cache  ",
+    "test:ci": "jest --detectOpenHandles --forceExit ",
+    "update": "npm i @aashas/common@latest"
   },
-  "author": "tsriramaraju",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "@aashas/common": "^1.2.61",
-    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/express-mongo-sanitize": "^1.3.2",
@@ -21,12 +20,7 @@
     "@types/mongoose": "^5.7.37",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
-    "@types/passport": "^1.0.4",
-    "@types/passport-facebook": "^2.1.10",
-    "@types/passport-google-oauth20": "^2.0.4",
     "@types/uuid": "^8.3.0",
-    "axios": "^0.21.0",
-    "bcrypt": "^5.0.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -36,14 +30,11 @@
     "helmet": "^4.2.0",
     "hpp": "^0.2.3",
     "mongoose": "^5.10.12",
+    "mongoose-update-if-current": "^1.4.0",
     "morgan": "^1.10.0",
     "node-nats-streaming": "^0.3.2",
-    "passport": "^0.4.1",
-    "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5",
-    "uuid": "^8.3.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
