--- a/server/skaffold.yaml
+++ b/server/skaffold.yaml
@@ -10,11 +10,14 @@ build:
       context: users
     - image: tsriramaraju/products
       context: products
+    - image: tsriramaraju/orders
+      context: orders
 deploy:
   kubectl:
     manifests:
       - k8s/auth-depl.yaml
       - k8s/users-depl.yaml
       - k8s/products-depl.yaml
+      - k8s/orders-depl.yaml
       - k8s/ingress-srv.yaml
       - k8s/nats-depl.yaml
