added admin service

--- a/server/k8s/ingress-srv.yaml
+++ b/server/k8s/ingress-srv.yaml
@@ -26,3 +26,7 @@ spec:
             backend:
               serviceName: orders-srv
               servicePort: 3004
+          - path: /api/v1/admin/?(.*)
+            backend:
+              serviceName: admin-srv
+              servicePort: 3006
