--- a/server/skaffold.yaml
+++ b/server/skaffold.yaml
@@ -12,12 +12,15 @@ build:
       context: products
     - image: tsriramaraju/orders
       context: orders
+    - image: tsriramaraju/admin
+      context: admin
 deploy:
   kubectl:
     manifests:
       - k8s/auth-depl.yaml
       - k8s/users-depl.yaml
       - k8s/products-depl.yaml
+      - k8s/admin-depl.yaml
       - k8s/orders-depl.yaml
       - k8s/ingress-srv.yaml
       - k8s/nats-depl.yaml
