--- a/server/k8s/ingress-srv.yaml
+++ b/server/k8s/ingress-srv.yaml
@@ -26,7 +26,7 @@ spec:
             backend:
               serviceName: orders-srv
               servicePort: 3004
-          - path: /api/v1/admin/?(.*)
+          - path: /api/v1/designer/?(.*)
             backend:
-              serviceName: admin-srv
+              serviceName: designer-srv
               servicePort: 3006
