--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "update": "npm i @aashas/common@latest && npm run update --prefix server/auth && npm run update --prefix server/users && npm run update --prefix server/products && npm run update --prefix server/orders && npm run update --prefix server/designer  &&  git add .&& git commit -m \" updated common module   \" ",
     "pub": "npm run pub --prefix server/common",
     "pub-main": "npm run pub-main --prefix server/common",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --no-cache",
+    "test:watch": "jest --watchAll --no-cache",
+    "test:open": "jest --detectOpenHandles"
   },
   "author": "tsriramaraju",
   "license": "ISC",
