--- a/server/auth/package.json
+++ b/server/auth/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node-dev src/index.ts",
     "test": "jest --watchAll --no-cache  ",
+    "test:open": "jest --watchAll --no-cache --detectOpenHandles  ",
     "test:ci": "jest --detectOpenHandles --forceExit",
     "update": "npm i @aashas/common@latest"
   },
