--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Aasha’s is a vibrant Couture and ready-to-wear fashion clothing house specializing in women and children’s wear. Designed in Hyderabad.",
   "main": "index.js",
   "scripts": {
-    "update": "npm i @aashas/common@latest && npm run update --prefix server/auth && npm run update --prefix server/users && npm run update --prefix server/products && npm run update --prefix server/orders && npm run update --prefix server/designer ",
-    "update:m": "npm i @aashas/common@latest && npm run update --prefix server/auth && npm run update --prefix server/users && npm run update --prefix server/products && npm run update --prefix server/orders && npm run update --prefix server/designer  &&  git add .&& git commit -m \" updated common module   \" ",
+    "update": "npm i @aashas/common@latest && npm run update --prefix server/auth && npm run update --prefix server/users && npm run update --prefix server/products && npm run update --prefix server/orders && npm run update --prefix server/designer && npm run update --prefix server/notification ",
+    "update:m": "npm i @aashas/common@latest && npm run update --prefix server/auth && npm run update --prefix server/users && npm run update --prefix server/products && npm run update --prefix server/orders && npm run update --prefix server/designer && npm run update --prefix server/notification  &&  git add .&& git commit -m \" updated common module   \" ",
     "pub": "npm run pub --prefix server/common",
     "pub-main": "npm run pub-main --prefix server/common",
     "test": "jest --no-cache",
