--- a/server/notification/package.json
+++ b/server/notification/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.0.0",
+    "express-validator": "^6.6.1",
     "helmet": "^4.2.0",
     "hpp": "^0.2.3",
     "mongoose": "^5.10.12",
