--- a/.github/workflows/notificationService.yml
+++ b/.github/workflows/notificationService.yml
@@ -16,5 +16,5 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cd server/notifications && npm i
-      - run: cd server/notifications && npm run test:ci
+      - run: cd server/notification && npm i
+      - run: cd server/notification && npm run test:ci
