--- a/server/common/package.json
+++ b/server/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aashas/common",
-  "version": "1.2.93",
+  "version": "1.2.94",
   "description": "Shared library between microservices for code reuse",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -11,7 +11,7 @@
     "clean": "del-cli --force ./build",
     "build": "npm run clean && tsc",
     "pub": " npm version patch && git add . && git commit -m \" minor fixes \"  && npm run build && npm publish",
-    "pub-main": "npm version patch &&  git add . && git commit -m \" added Notification model \"  && npm run build && npm publish"
+    "pub-main": "npm version patch &&  git add . && git commit -m \" removed id from document  \"  && npm run build && npm publish"
   },
   "author": "",
   "license": "ISC",
