--- a/server/skaffold.yaml
+++ b/server/skaffold.yaml
@@ -6,21 +6,24 @@ build:
   artifacts:
     - image: tsriramaraju/auth
       context: auth
-    - image: tsriramaraju/users
-      context: users
-    - image: tsriramaraju/products
-      context: products
-    - image: tsriramaraju/orders
-      context: orders
-    - image: tsriramaraju/designer
-      context: designer
+    # - image: tsriramaraju/users
+    #   context: users
+    # - image: tsriramaraju/products
+    #   context: products
+    # - image: tsriramaraju/orders
+    #   context: orders
+    # - image: tsriramaraju/designer
+    #   context: designer
+    # - image: tsriramaraju/notification
+    #   context: notification
 deploy:
   kubectl:
     manifests:
       - k8s/auth-depl.yaml
-      - k8s/users-depl.yaml
-      - k8s/products-depl.yaml
-      - k8s/designer-depl.yaml
-      - k8s/orders-depl.yaml
-      - k8s/ingress-srv.yaml
-      - k8s/nats-depl.yaml
+      # - k8s/users-depl.yaml
+      # - k8s/products-depl.yaml
+      # - k8s/notification-depl.yaml
+      # - k8s/designer-depl.yaml
+      # - k8s/orders-depl.yaml
+      # - k8s/ingress-srv.yaml
+      # - k8s/nats-depl.yaml
