--- a/server/users/tsconfig.json
+++ b/server/users/tsconfig.json
@@ -69,12 +69,13 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": [
-    "./src/**/*",
-    "./@types",
-    "../common/src/loaders/loggers.ts",
-    "src/config",
-    "../users/src/index.ts"
-  ],
-  "exclude": ["node_modules", "tests"]
+  // "include": [
+  //   "./src/**/*",
+  //   "./@types",
+  //   // "../common/src/loaders/loggers.ts",
+  //   "src/config",
+  //   "./index.ts",
+  //   "./*.ts"
+  // ],
+  "exclude": ["node_modules", "tests", "__tests__"]
 }
