--- a/server/notification/package.json
+++ b/server/notification/package.json
@@ -21,6 +21,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
     "@types/uuid": "^8.3.0",
+    "axios": "^0.21.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
