--- a/webApp/package.json
+++ b/webApp/package.json
@@ -16,6 +16,7 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "framer-motion": "^3.1.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-manifest": "^2.9.1",
