complete home page

--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   "author": "tsriramaraju",
   "license": "ISC",
   "dependencies": {
+    "gatsby": "^2.26.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "@aashas/common": "^1.2.100",
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
